--- a/box.css
+++ b/box.css
@@ -1,4 +1,15 @@
 .box1 {
   width: 300px;
   height: 300px;
+  background-color: red;
+  margin-left: 90px;
+  padding: 30px;
+  padding-top: 500px;
+}
+
+.box2 {
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+  border: 5px solid yellow;
 }
