--- a/box.css
+++ b/box.css
@@ -1,10 +1,10 @@
 .box1 {
   width: 300px;
   height: 300px;
-  background-color: red;
-  margin-left: 90px;
-  padding: 30px;
-  padding-top: 500px;
+  background-color: #9400d3;
+  margin-left: 30px;
+  padding: 0px;
+  padding-top: 10px;
 }
 
 .box2 {
